[package]
name = "aml-lib"
version = "0.1.1"
authors = ["Claude Pilatre <claude.pilatre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
url = "2.1.1"
base64 = "0.13.0"
sha1 = "0.6.0"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.2"
